--- a/components/41-organisms/filter/_filter.scss
+++ b/components/41-organisms/filter/_filter.scss
@@ -47,10 +47,6 @@
       }
     }
 
-    > .modal-overlay {
-      display: none;
-    }
-
     form {
       // style first level labels as headings
       > .form-item > label,
